<resources>
    <string name="app_name">Efun手機遊戲平台</string>
    <string name="efun_pd_logout">再次點擊退出!</string>
    <string name="efun_pd_reset_account_hint">點擊切換帳號</string>
    <string name="efun_pd_share_2">Share 至以下平台</string>
    <string name="efun_pd_loading">Loading</string>
    <string name="efun_pd_recommended_games">推薦遊戲</string>
    <string name="efun_pd_recommended_games_more">+more</string>
    <string name="efun_pd_games_summary">遊戲資訊</string>
    <string name="efun_pd_download_for_reward">下載送點數</string>
    <string name="efun_pd_xlistview_header_hint_normal">下拉刷新</string>
    <string name="efun_pd_xlistview_header_hint_ready">放開我,人家正在加載了喇</string>
    <string name="efun_pd_xlistview_header_hint_loading">正在愉快加載ing</string>
    <string name="efun_pd_xlistview_header_last_time">上次更新時間:</string>
    <string name="efun_pd_xlistview_footer_hint_normal">查看更多</string>
    <string name="efun_pd_xlistview_footer_hint_ready">松開載入更多</string>
    <string name="efun_pd_xlistview_time_now">剛剛</string>
    <string name="efun_pd_xlistview_time_minutes">分鐘前</string>
    <string name="efun_pd_network_error">網絡未連接,請檢查你的網絡狀況</string>
    <string name="efun_pd_request_error">請求異常了,請點擊圖片重新嘗試</string>
    <string name="efun_pd_timeout_error">請求超時了,請點擊圖片重新嘗試</string>
    <string name="efun_pd_empty_error">暫無數據,請稍後再試</string>
    <string name="efun_pd_vedio">視頻</string>
    <string name="efun_pd_game">遊戲</string>
    <string name="efun_pd_welfare">好康</string>
    <string name="efun_pd_summary">資訊</string>
    <string name="efun_pd_knock_code">序號:</string>
    <string name="efun_pd_code_center">我的序號中心</string>
    <string name="efun_pd_gift_detail">禮包詳情</string>
    <string name="efun_pd_act">活動</string>
    <string name="efun_pd_act_content">活動內容</string>
    <string name="efun_pd_news">新闻</string>
    <string name="efun_pd_summary_content">資訊內容</string>
    <string name="efun_pd_receive_awards">領取點卡獎勵</string>
    <string name="efun_pd_gifts_downloads">禮包中心</string>
    <string name="efun_pd_cs">客服</string>
    <string name="efun_pd_strategy">攻略</string>
    <string name="efun_pd_code">QR Code掃描</string>
    <string name="efun_pd_set">設置</string>
    <string name="efun_pd_sure">確定</string>
    <string name="efun_pd_check">查看</string>
    <string name="efun_pd_cancel">取消</string>
    <string name="efun_pd_games_intro">遊戲介紹:</string>
    <string name="efun_pd_i_wanna_commend">我要評論</string>
    <string name="efun_pd_download_en">Download</string>
    <string name="efun_pd_start_en">Start</string>
    <string name="efun_pd_update_en">Update</string>
    <string name="efun_pd_update_ok">好哦</string>
    <string name="efun_pd_update_cancel">不要</string>
    <string name="efun_pd_account_bind">手機簡訊驗證</string>
    <string name="efun_pd_bind_account">綁定帳號</string>
    <string name="efun_pd_account">手機號碼</string>
    <string name="efun_pd_verify_code">驗證碼　</string>
    <string name="efun_pd_finish_verify">完成驗證</string>
    <string name="efun_pd_phone_yourself_hint">您的手機號碼（僅限台灣用戶）</string>
    <string name="efun_pd_account_hint">輸入手機號碼</string>
    <string name="efun_pd_verify_code_hint">輸入驗證碼</string>
    <string name="efun_pd_verify_code_title">輸入驗證碼:</string>
    <string name="efun_pd_get_verify_code">獲取驗證碼</string>
    <string name="efun_pd_get_awards">領取獎勵</string>
    <string name="efun_pd_get_awards_rule">規則說明</string>
    <string name="efun_pd_awards_type_title">選擇適合你的獎勵</string>
    <string name="efun_pd_commend">評論</string>
    <string name="efun_pd_share">分享</string>
    <string name="efun_pd_get_reword">領取記錄</string>
    <string name="efun_pd_copy">複製</string>
    <string name="efun_pd_rob">立即搶</string>
    <string name="efun_pd_robed">這禮包你已擁有</string>
    <string name="efun_pd_copy_success">複製成功</string>
    <string name="efun_pd_reward_rate">中獎率</string>
    <string name="efun_pd_gift_count">禮包數量</string>
    <string name="efun_pd_hint_gift_knocked">恭喜您成功搶到一個禮包</string>
    <string name="efun_pd_egg">砸蛋</string>
    <string name="efun_pd_member_gold_value">會員說明</string>
    <string name="efun_pd_vip">VIP 專區</string>
    <string name="efun_pd_rest">剩餘</string>
    <string name="efun_pd_end_date">截止時間：</string>
    <string name="efun_pd_category">類型</string>
    <string name="efun_pd_description">描述</string>
    <string name="efun_pd_email">郵箱</string>
    <string name="efun_pd_phone">手機</string>
    <string name="efun_pd_ask">我要提問</string>
    <string name="efun_pd_question">常見問題</string>
    <string name="efun_pd_cs_ask_notify">*留下您的聯繫方式,我們將更快回覆您哦</string>
    <string name="efun_pd_submit">提交</string>
    <string name="efun_pd_save">存儲</string>
    <string name="efun_pd_share_success">分享成功</string>
    <string name="efun_pd_share_failure">分享失敗</string>
    <string name="efun_pd_login_exception">登入異常</string>
    <string name="efun_pd_chose_game">選擇遊戲</string>
    <string name="efun_pd_chose_server">選擇伺服器</string>
    <string name="efun_pd_chose_role">選擇角色</string>
    <string name="efun_pd_history">歷史記錄</string>
    <string name="efun_pd_your_question">我的問題</string>
    <string name="efun_pd_your_question_title">您的問題是:</string>
    <string name="efun_pd_cs_reply">客服回覆</string>
    <string name="efun_pd_cs_reply_record">回覆記錄</string>
    <string name="efun_pd_reply">回覆</string>
    <string name="efun_pd_question_title">問題</string>
    <string name="efun_pd_dimensional_url_error">鏈接地址有誤！</string>
    <string name="efun_pd_role_cs">客服</string>
    <string name="efun_pd_role_self">我</string>
    <string name="efun_pd_finish_question">滿意度評分</string>
    <string name="efun_pd_replay_ask_again">我要追問</string>
    <string name="efun_pd_i_ask_again">我的追問</string>
    <string name="efun_pd_your_ask_again">你的追問</string>
    <string name="efun_pd_finished">已完結</string>
    <string name="efun_pd_regist_log">註冊/登入</string>
    <string name="efun_pd_recharge_question">儲值問題</string>
    <string name="efun_pd_recharge">儲值</string>
    <string name="efun_pd_credit">積分</string>
    <string name="efun_pd_vip_prefecture">VIP 專區</string>
    <string name="efun_pd_special_power">特權</string>
    <string name="efun_pd_persion_reset_password_info">設置最新的帳號密碼</string>
    <string name="efun_pd_current_password">當前密碼</string>
    <string name="efun_pd_new_password">新密碼</string>
    <string name="efun_pd_new_password_notify">6~16個字符,區分大小寫</string>
    <string name="efun_pd_confirm_password">確認密碼</string>
    <string name="efun_pd_reset_password">修改密碼</string>
    <string name="efun_pd_reset_per_info">修改個人信息</string>
    <string name="efun_pd_reset_account">切換帳號</string>
    <string name="efun_pd_exit_login">退出登入</string>
    <string name="efun_pd_gift_limit">領取點數的條件還未達到哦，詳情請看領獎步驟</string>
    <string name="efun_pd_sex">性別</string>
    <string name="efun_pd_header">頭像</string>
    <string name="efun_pd_user_level">軍銜:</string>
    <string name="efun_pd_nick">暱稱</string>
    <string name="efun_pd_check_update">版本更新</string>
    <string name="efun_pd_last_version">已是最新版本</string>
    <string name="efun_pd_new_version">新版本:</string>
    <string name="efun_pd_push_to_friends">推薦給好友</string>
    <string name="efun_pd_about_us">關於我們</string>
    <string name="efun_pd_notification_update_1">人家有新版本辣,要更新一下嗎？</string>
    <string name="efun_pd_notification_update_2">人家有新版本辣,更新一下吧</string>
    <string name="efun_pd_has_new">有新回覆</string>
    <string name="efun_pd_camera_crop_error">您的設備不支持圖片裁切,請到電腦上進行修改</string>
    <string name="efun_pd_thumb_error">您的設備不支持</string>
    <string name="efun_pd_gift_getted">已領取獎勵</string>
    <string name="efun_pd_error_video_url">無效的視頻地址</string>
    <string name="efun_pd_hint_account">帳戶</string>
    <string name="efun_pd_hint_password">密碼</string>
    <string name="efun_pd_gift_password">密碼:</string>
    <string name="efun_pd_gift_account">序號:</string>
    <string name="efun_pd_login_by_facebook">Facebook登入</string>
    <string name="efun_pd_login_by_google">Google+登入</string>
    <string name="efun_pd_login_by_bahamut">巴哈登入</string>
    <string name="efun_pd_login">登入</string>
    <string name="efun_pd_login_forget">人家忘記密碼啦</string>
    <string name="efun_pd_login_register">沒有帳號的先來註冊吧</string>
    <string name="efun_pd_hint_account_by_bahamut">巴哈 用戶</string>
    <string name="efun_pd_hint_account_by_facebook">Facebook 用戶</string>
    <string name="efun_pd_hint_account_by_google">Google+ 用戶</string>
    <string name="efun_pd_register_account">帳號:</string>
    <string name="efun_pd_register_password">密碼:</string>
    <string name="efun_pd_register_cofirm_password">確認密碼:</string>
    <string name="efun_pd_register_email">郵箱地址:</string>
    <string name="efun_pd_register_finish">完成註冊</string>
    <string name="efun_pd_hint_register_account">6~18個字符,可使用字母、數字、下劃線,需以字母開頭</string>
    <string name="efun_pd_hint_register_password">6~16個字符,區分大小寫</string>
    <string name="efun_pd_hint_register_cofirm_password">請再次填寫密碼</string>
    <string name="efun_pd_hint_register_email">請填寫郵箱地址以方便找回密碼</string>
    <string name="efun_pd_hint_forget_email">*請填寫注冊帳號所用的郵箱</string>
    <string name="efun_pd_bind_phone">手機簡訊驗證</string>
    <string name="efun_pd_phone_number">手機號碼:</string>
    <string name="efun_pd_bind_phone_intro">發送中...</string>
    <string name="efun_pd_bind_phone_intro_title">驗證您的手機號碼，Efun會向您發送一條驗證簡訊，請輸入驗證碼完成驗證</string>
    <string name="efun_pd_toast_error_phone">請先獲取驗證碼</string>
    <string name="efun_pd_toast_empty_phone">手機號碼不能為空</string>
    <string name="efun_pd_toast_empty_vcode">驗證碼不能為空</string>
    <string name="efun_pd_toast_empty_gifts">暫無禮包可以領取</string>
    <string name="efun_pd_register">註冊</string>
    <string name="efun_pd_vip_experience">會員經驗</string>
    <string name="efun_pd_service_clause">服務協議</string>
    <string name="efun_pd_forget_email">郵箱:</string>
    <string name="efun_pd_forget_password">忘記密碼</string>
    <string name="efun_pd_get_password">找回密碼</string>
    <string name="efun_pd_game_item_zan">人點讚</string>
    <string name="efun_pd_game_item_version_prefix">更新至</string>
    <string name="efun_pd_game_item_version">版</string>
    <string name="efun_pd_game_version">遊戲版本:</string>
    <string name="efun_pd_game_size">遊戲大小:</string>
    <string name="efun_pd_loading_msg_commend">提交數據中...</string>
    <string name="efun_pd_uninstalled_google_play">請先安裝Google商店</string>
    <string name="efun_pd_loading_msg_login">登入中...</string>
    <string name="efun_pd_toast_timeout">請求超時,請稍後再試</string>
    <string name="efun_pd_toast_empty_account">請輸入帳號</string>
    <string name="efun_pd_toast_empty_password">請輸入密碼</string>
    <string name="efun_pd_toast_error_account">帳號格式：6~18個字符,可使用字母、數字、下劃線,需以字母開頭！</string>
    <string name="efun_pd_toast_error_account_first_char">帳號格式：需以字母開頭！</string>
    <string name="efun_pd_toast_error_password">密碼君要求6~16位這麼長！</string>
    <string name="efun_pd_toast_empty_confirm_password">請重複密碼</string>
    <string name="efun_pd_toast_empty_different_password">前後密碼不一致</string>
    <string name="efun_pd_toast_empty_email">請輸入郵箱</string>
    <string name="efun_pd_toast_error_email">郵箱格式錯誤</string>
    <string name="efun_pd_toast_error_webview_load">頁面加載錯誤...</string>
    <string name="efun_pd_sex_boy">男</string>
    <string name="efun_pd_sex_girl">女</string>
    <string name="efun_pd_receive_step">任務步驟</string>
    <string name="efun_pd_download_for_point">下載送點數</string>
    <string name="efun_pd_phone_bind_completed">已通過手機簡訊驗證</string>
    <string name="efun_pd_phone_bind_uncompleted">未通過手機簡訊驗證</string>
    <string name="efun_pd_phone_bind_now">立即通過簡訊驗證</string>
    <string name="efun_pd_anonymous">匿名</string>
    <string name="efun_pd_empty_content">請輸入內容</string>
    <string name="efun_pd_empty_nick">Player</string>
    <string name="efun_pd_agree_service_clause">同意 "服務條款 "</string>
    <string name="efun_pd_check_service_clause">請勾選服務條款</string>
    <string name="efun_pd_cs_param_type_ask_login">登入異常</string>
    <string name="efun_pd_cs_param_type_ask_pay">儲值問題</string>
    <string name="efun_pd_cs_param_type_ask_account">帳號問題</string>
</resources>