<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.efun.platform.widget.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.efun.platform.widget.TitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/e_size_24"
        android:background="@drawable/efun_pd_cons_white_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/e_size_88"
            android:layout_marginTop="@dimen/e_size_37"
            android:text="@string/efun_pd_persion_reset_password_info"
            android:textColor="@android:color/black"
            android:textSize="@dimen/e_text_size_50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/e_size_35"
            android:layout_marginLeft="@dimen/e_size_88"
            android:layout_marginTop="@dimen/e_size_60"
            android:text="@string/efun_pd_current_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/e_text_size_50" />

        <EditText
            android:id="@+id/edit_1"
            android:layout_width="@dimen/e_size_700"
            android:layout_height="@dimen/e_size_100"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/efun_pd_input_edging_bg"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/e_size_40"
            android:paddingRight="@dimen/e_size_40"
            android:singleLine="true"
            android:textColor="@color/e_8e8e8e"
            android:textSize="@dimen/e_text_size_45" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/e_size_1"
            android:layout_marginLeft="@dimen/e_size_53"
            android:layout_marginRight="@dimen/e_size_53"
            android:layout_marginTop="@dimen/e_size_83"
            android:background="@color/e_a7a7aa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/e_size_40"
            android:layout_marginLeft="@dimen/e_size_88"
            android:layout_marginTop="@dimen/e_size_42"
            android:text="@string/efun_pd_new_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/e_text_size_50" />

        <EditText
            android:id="@+id/edit_2"
            android:layout_width="@dimen/e_size_700"
            android:layout_height="@dimen/e_size_100"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/efun_pd_input_edging_bg"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/e_size_40"
            android:paddingRight="@dimen/e_size_40"
            android:singleLine="true"
            android:textColor="@color/e_8e8e8e"
            android:textSize="@dimen/e_text_size_45" />

        <TextView
            android:layout_width="@dimen/e_size_700"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/efun_pd_new_password_notify"
            android:textColor="@color/e_c1c1c1"
            android:textSize="@dimen/e_text_size_28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/e_size_40"
            android:layout_marginLeft="@dimen/e_size_88"
            android:layout_marginTop="@dimen/e_size_40"
            android:text="@string/efun_pd_confirm_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/e_text_size_50" />

        <EditText
            android:id="@+id/edit_3"
            android:layout_width="@dimen/e_size_700"
            android:layout_height="@dimen/e_size_100"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/efun_pd_input_edging_bg"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/e_size_40"
            android:paddingRight="@dimen/e_size_40"
            android:singleLine="true"
            android:textColor="@color/e_8e8e8e"
            android:textSize="@dimen/e_text_size_45" />
    </LinearLayout>

</LinearLayout>