<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/efun_pd_cons_toast_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/e_size_200"
            android:gravity="center"
            android:padding="@dimen/e_size_40"
            android:text="@string/efun_pd_notification_update_1"
            android:textColor="@color/e_027bff"
            android:textSize="@dimen/e_text_size_40" />

        <RelativeLayout
            android:id="@+id/contaier_relative_1"
            android:layout_width="@dimen/e_size_700"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/e_size_40" >

            <TextView
                android:id="@+id/text_1"
                android:layout_width="@dimen/e_size_250"
                android:layout_height="@dimen/e_size_100"
                android:background="@drawable/efun_pd_toast_update_button_selector"
                android:gravity="center"
                android:text="@string/efun_pd_update_ok"
                android:textColor="@android:color/black"
                android:textSize="@dimen/e_size_50" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="@dimen/e_size_250"
                android:layout_height="@dimen/e_size_100"
                android:layout_alignParentRight="true"
                android:background="@drawable/efun_pd_toast_update_button_selector"
                android:gravity="center"
                android:text="@string/efun_pd_update_cancel"
                android:textColor="@android:color/black"
                android:textSize="@dimen/e_size_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contaier_relative_2"
            android:layout_width="@dimen/e_size_700"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/e_size_40" >

            <TextView
                android:id="@+id/text_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/e_size_100"
                android:background="@drawable/efun_pd_toast_update_button_selector"
                android:gravity="center"
                android:text="@string/efun_pd_update_ok"
                android:textColor="@android:color/black"
                android:textSize="@dimen/e_size_50" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>